--- a/index.ipynb
+++ b/index.ipynb
@@ -44,12 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define Passenger Class Here\n",
-    "class Pa"
+    "class Passenger:\n",
+    "    pass"
    ]
   },
   {
