--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "# Define Passenger Class Here\n",
     "class Passenger:\n",
-    "    pass"
+    "    "
    ]
   },
   {
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rebecca_black = Pass # initialize Rebecca Black here\n",
+    "rebecca_black = Passenger() # initialize Rebecca Black here\n",
     "print(rebecca_black.first) # \"Rebecca\"\n",
     "print(rebecca_black.last) # \"Black\"\n",
     "print(rebecca_black.email) # \"rebecca.black@gmail.com\"\n",
