Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "# Define Passenger Class Here\n",
     "class Passenger:\n",
-    "    def __init__(self, number_of_sides):\n",
+    "    def __init__(self):\n",
     "        self.n = number_of_sides"
    ]
   },
