Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,7 @@
     "# Define Passenger Class Here\n",
     "class Passenger:\n",
     "    def __init__(self):\n",
-    "        self = number_of_sides"
+    "        rides_taken = 0"
    ]
   },
   {
