Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,8 @@
     "# Define Passenger Class Here\n",
     "class Passenger:\n",
     "    def __init__(self):\n",
-    "        rides_taken = 0"
+    "        rides_taken = 0\n",
+    "        "
    ]
   },
   {
