Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
     "class Passenger:\n",
     "    def __init__(self):\n",
     "        rides_taken = 0\n",
-    "        first = str(se)"
+    "        first = str(self)."
    ]
   },
   {
