--- a/index.ipynb
+++ b/index.ipynb
@@ -44,15 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-1ec139babd75>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-1ec139babd75>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    first = str(self).split\"_\"[0]\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Define Passenger Class Here\n",
     "class Passenger:\n",
     "    def __init__(self):\n",
     "        rides_taken = 0\n",
-    "        first = str(self).split\"_\""
+    "        first = str(self).split\"_\"[0]"
    ]
   },
   {
