--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,7 @@
     "class Passenger:\n",
     "    def __init__(self):\n",
     "        rides_taken = 0\n",
-    "        first = str(self).split\"_\"[0]"
+    "        first = str(self).split()\"_\"[0]"
    ]
   },
   {
