Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -44,15 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define Passenger Class Here\n",
+    "\n",
     "class Passenger:\n",
-    "    def __init__(self):\n",
-    "        rides_taken = 0\n",
-    "        first = str(self).split(\"_\")[0]"
+    "\n",
+    "    def __init__(self, first, last, email, rides_taken=0):\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.email = email\n",
+    "        self.rides_taken = rides_taken    "
    ]
   },
   {
