--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,7 @@
     }
    ],
    "source": [
-    "rebecca_black = Passenger(Rebecca, B) # initialize Rebecca Black here\n",
+    "rebecca_black = Passenger(Rebecca, Black, ) # initialize Rebecca Black here\n",
     "print(rebecca_black.first) # \"Rebecca\"\n",
     "print(rebecca_black.last) # \"Black\"\n",
     "print(rebecca_black.email) # \"rebecca.black@gmail.com\"\n",
