Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -112,7 +112,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger Class Here"
+    "class Passenger:\n",
+    "\n",
+    "    def __init__(self, first, last, email, rides_taken=0):\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.email = email\n",
+    "        self.rides_taken = rides_taken    # Define Passenger Class Here"
    ]
   },
   {
