Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Passenger:\n",
+    "class Driver:\n",
     "\n",
     "    def __init__(self, first, last, email, rides_taken=0):\n",
     "        self.first = first\n",
