--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "class Driver:\n",
     "\n",
-    "    def __init__(self, first, last, email, rides_taken=0):\n",
+    "    def __init__(self, first, last, fa):\n",
     "        self.first = first\n",
     "        self.last = last\n",
     "        self.email = email\n",
