Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -141,7 +141,7 @@
     }
    ],
    "source": [
-    "dale_earnhardt = Driver('Dale',) # initialize Dale Earnhardt here\n",
+    "dale_earnhardt = Driver('Dale', 'Earnhar') # initialize Dale Earnhardt here\n",
     "print(dale_earnhardt.first) # \"Dale\"\n",
     "print(dale_earnhardt.last) # \"Earnhardt\"\n",
     "print(dale_earnhardt.favorite_hobby) # \"driving\""
