Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -117,7 +117,6 @@
     "    def __init__(self, first, last, favorite_hobby = 'driving'):\n",
     "        self.first = first\n",
     "        self.last = last\n",
-    "        self.email = email\n",
     "        self.rides_taken = rides_taken    # Define Passenger Class Here"
    ]
   },
@@ -141,7 +140,7 @@
     }
    ],
    "source": [
-    "dale_earnhardt = Driver('Dale', 'Earnhar') # initialize Dale Earnhardt here\n",
+    "dale_earnhardt = Driver('Dale', 'Earnhardt') # initialize Dale Earnhardt here\n",
     "print(dale_earnhardt.first) # \"Dale\"\n",
     "print(dale_earnhardt.last) # \"Earnhardt\"\n",
     "print(dale_earnhardt.favorite_hobby) # \"driving\""
