Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -117,7 +117,7 @@
     "    def __init__(self, first, last, favorite_hobby = 'driving'):\n",
     "        self.first = first\n",
     "        self.last = last\n",
-    "        self.rides_taken = rides_taken    # Define Passenger Class Here"
+    "        self.favorite_hobby = favorite_hobby    # Define Passenger Class Here"
    ]
   },
   {
